--- a/index.html
+++ b/index.html
@@ -54,6 +54,40 @@
                 </div>
             </div>
         </section>
+        <!-- experience-part -->
+        <section class="content-third-part">
+            <div class="experiences">
+                <div class="experience-info">
+                    <div class="title">
+                        <hr class="design">
+                        <h3 class="experience-title">Features you will<br> love & enjoy</h3>
+                        <p class="ex-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    </div>
+                    <div class="data-info">
+                        <div class="mbl-data">
+                            <h4 class="data-title">Dexktop & Mobile Version</h4>
+                            <p class="data-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="builder-data">
+                            <h4 class="data-title">Drag & Drop Builder</h4>
+                            <p class="data-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="design-data">
+                            <h4 class="data-title">Awesome Modern Design</h4>
+                            <p class="data-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="edit-data">
+                            <h4 class="data-title">Super Easy to Edit</h4>
+                            <p class="data-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="experience-banner">
+                    <img src="./images/architect.png" alt="" class="architect">
+                    <button class="ex-btn"><span id="year">10+Year</span><br>Experience</button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
