--- a/index.html
+++ b/index.html
@@ -88,6 +88,37 @@
                 </div>
             </div>
         </section>
+        <!-- facts part -->
+        <section class="content-four-part">
+            <div class="facts">
+                <div class="facts-info">
+                    <h3 class="fact-title">Some Facts</h3>
+                    <p class="fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                </div>
+                <div class="facts-banner">
+                    <div class="ribon">
+                        <img src="./images/icons/ribon.png" alt="" class="icon">
+                        <h3 class="ribon-title">54</h3>
+                        <p class="ribon-description">Awards Winnings</p>
+                    </div>
+                    <div class="ribon">
+                        <img src="./images/icons/projects.png" alt="" class="icon">
+                        <h3 class="ribon-title">1458</h3>
+                        <p class="ribon-description">Project Finished</p>
+                    </div>
+                    <div class="ribon">
+                        <img src="./images/icons/customers.png" alt="" class="icon">
+                        <h3 class="ribon-title">590</h3>
+                        <p class="ribon-description">Clients Worked</p>
+                    </div>
+                    <div class="ribon">
+                        <img src="./images/icons/email.png" alt="" class="icon">
+                        <h3 class="ribon-title">22578</h3>
+                        <p class="ribon-description">Email Send</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
