--- a/index.html
+++ b/index.html
@@ -119,6 +119,73 @@
                 </div>
             </div>
         </section>
+        <!-- blog section -->
+        <section class="blog-container">
+            <div class="top-blogs">
+                <h2 class="section-title">Top Blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog1.svg" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite
+                                UI/UX Goodies</h3>
+                                <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-2.svg" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite
+                                UI/UX Goodies</h3>
+                                <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-3.svg" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite
+                                UI/UX Goodies</h3>
+                                <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-4.svg" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite
+                                UI/UX Goodies</h3>
+                                <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <!-- sponsors -->
+        <section class="sponsors">
+            <div class="sponsor">
+                <div class="sponsor-info">
+                    <h2 class="sponsor-title">Our Sponsors</h2>
+                    <p class="sponsor-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                </div>
+                <div class="sponsor-banner">
+                    <img src="./images/sponsors/spotify.png" alt="">
+                    <img src="./images/sponsors/amazon.png" alt="">
+                    <img src="./images/sponsors/google.png" alt="">
+                    <img src="./images/sponsors/telerama.png" alt="">
+                    <img src="./images/sponsors/figma.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <p class="footer-title">All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 </body>
 </html>
